# csm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  requirements.txt
.specstory/history/: 2025-03-23_18-59-project-conversion-to-rust.md
csm/: Cargo.toml
docs/: aws_deployment.md  mac_setup.md  realtime_voice_demo.md
examples/: audio_test.rs  conversation.rs  generate_test_audio.rs
frontend/src/: App.css  App.tsx
models/: README.md
scripts/: create_model.py  download_weights.py
src/: lib.rs  main.rs
src/audio/: mod.rs  streaming.rs
src/models/: llama.rs  mod.rs
src/server/: websocket.rs
src/utils/: mod.rs
static/: app.js  index.html  styles.css
