[package]
name = "csm"
version = "0.1.0"
edition = "2021"
authors = ["Seth Ford"]
description = "Rust implementation of CSM audio processing and generation"
license = "MIT"

[[example]]
name = "conversation"
path = "examples/conversation.rs"

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# CLI
clap = { version = "4.5", features = ["derive"] }
# Audio processing
hound = "3.5"  # WAV file handling
cpal = "0.15"  # Audio I/O
# Machine Learning
tch = { version = "0.19", features = ["download-libtorch"] }  # PyTorch bindings
# Utilities
num = "0.4"
rand = "0.8"
ndarray = "0.15"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"